Refactor MockLlm to MockChatClient with realistic API
The mock now accepts separate system and user message parameters,
mirroring real LLM chat APIs. Captured messages enable verification
of how feedback is incorporated into subsequent requests.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>